--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <meta name="referrer" content="strict-origin-when-cross-origin" />
     
     <!-- Permissions Policy - Minimal restrictions for development -->
-    <meta http-equiv="Permissions-Policy" content="camera=(), microphone=(), payment=(), usb=(), geolocation=(), magnetometer=(), midi=(), sync-xhr=(), xr-spatial-tracking=(), autoplay=(), display-capture=(), hid=(), idle-detection=(), local-fonts=(), otp-credentials=(), publickey-credentials-create=(), publickey-credentials-get=(), screen-wake-lock=(), serial=(), shared-storage=(), storage-access=(), unload=(), web-share=(), window-management=()" />
+    <meta http-equiv="Permissions-Policy" content="camera=(),  microphone=(self), payment=(), usb=(), geolocation=(), magnetometer=(), midi=(), sync-xhr=(), xr-spatial-tracking=(), autoplay=(), display-capture=(), hid=(), idle-detection=(), local-fonts=(), otp-credentials=(), publickey-credentials-create=(), publickey-credentials-get=(), screen-wake-lock=(), serial=(), shared-storage=(), storage-access=(), unload=(), web-share=(), window-management=()" />
     
     <!-- Geo Tags -->
     <meta name="geo.region" content="IN" />
