--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   <link rel="icon" type="image/x-icon" href="/favicon.ico" />
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
   <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#7e22ce" />
-  <meta name="msapplication-TileColor" content="#7e22ce" />
+  <meta name="msapplication-TileColor" content="#09090b" />
 
   <!-- Performance Optimization - Preconnect & DNS Prefetch -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -58,7 +58,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" />
 
   <!-- Theme Color with Media Queries -->
-  <meta name="theme-color" content="#7e22ce" />
+  <meta name="theme-color" content="#09090b" />
   <meta name="color-scheme" content="light dark" />
 
   <!-- Mobile App Capable -->
